WebCore:

Reviewed by Sam Weinig.

        - fix http://bugs.webkit.org/show_bug.cgi?id=17152
          Paragraphs indented with :first-letter and text-align CSS render incorrectly

        Test: fast/text/apply-start-width-after-skipped-text.html

        * rendering/bidi.cpp:
        (WebCore::RenderBlock::findNextLineBreak): Improved the logic for when
        to figure in the padding, border and margin before a text node when the
        line begins inside a text node.

LayoutTests:

        Reviewed by Sam Weinig.

        - test for http://bugs.webkit.org/show_bug.cgi?id=17152
          Paragraphs indented with :first-letter and text-align CSS render incorrectly

        * fast/text/apply-start-width-after-skipped-text.html: Added.
        * platform/mac/fast/text/apply-start-width-after-skipped-text-expected.checksum: Added.
        * platform/mac/fast/text/apply-start-width-after-skipped-text-expected.png: Added.
        * platform/mac/fast/text/apply-start-width-after-skipped-text-expected.txt: Added.



git-svn-id: svn://svn.chromium.org/blink/trunk@30590 bbb929c8-8fbe-4397-9dbb-9b2b20218538