third_party/WebKit/WebCore/rendering/bidi.cpp
@@ -1354,6 +1354,8 @@ void RenderBlock::fitBelowFloats(int widthToFit, int& availableWidth)
 
 BidiIterator RenderBlock::findNextLineBreak(BidiIterator &start, BidiState &bidi)
 {
+    bool appliedStartWidth = start.pos > 0;
+
     // eliminate spaces at beginning of line
     int width = skipWhitespace(start, bidi);
     int w = 0;
@@ -1543,6 +1545,9 @@ BidiIterator RenderBlock::findNextLineBreak(BidiIterator &start, BidiState &bidi
             } else
                 tmpW += o->width() + o->marginLeft() + o->marginRight() + inlineWidth(o);
         } else if (o->isText()) {
+            if (!pos)
+                appliedStartWidth = false;
+
             RenderText* t = static_cast<RenderText*>(o);
 
             int strlen = t->textLength();
@@ -1555,8 +1560,6 @@ BidiIterator RenderBlock::findNextLineBreak(BidiIterator &start, BidiState &bidi
             int wordSpacing = o->style()->wordSpacing();
             int lastSpaceWordSpacing = 0;
 
-            bool appliedStartWidth = pos > 0; // If the span originated on a previous line,
-                                              // then assume the start width has been applied.
             int wrapW = tmpW + inlineWidth(o, !appliedStartWidth, true);
             int charWidth = 0;
             int nextBreakable = -1;
